...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Record-->
        <scene sceneID="jnQ-wV-NS2">
            <objects>
                <viewController title="Record" id="e5Z-SD-48H" customClass="RecordViewController" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="yc7-qy-hzb"/>
                        <viewControllerLayoutGuide type="bottom" id="FSE-y9-S4x"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="UtJ-Vs-d2X">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
...
                                        <rect key="frame" x="0.0" y="243.5" width="375" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="5VB-pw-DWB" id="PPC-nQ-TLv">
                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Delete" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="dDL-Mg-Edh">
                                                    <rect key="frame" x="15" y="0.0" width="345" height="43.5"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                    <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
...
            </objects>
            <point key="canvasLocation" x="-4048" y="217"/>
        </scene>
        <!--Files-->
        <scene sceneID="HWB-sg-bDd">
            <objects>
                <tableViewController title="Files" id="3OF-43-rtd" customClass="FilesTableViewController" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="R8s-9k-SuD">
                        <rect key="frame" x="0.0" y="64" width="375" height="554"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="filesCell" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="filesCell" textLabel="BTH-bL-Vky" detailTextLabel="sO8-02-8yE" imageView="xrF-o0-Wub" style="IBUITableViewCellStyleSubtitle" id="Xhp-dY-SlX">
...
            </objects>
            <point key="canvasLocation" x="-4794" y="217"/>
        </scene>
        <!--Settings-->
        <scene sceneID="J98-SY-oRc">
            <objects>
                <tableViewController title="Settings" id="0rZ-Qv-VEs" customClass="SettingsTableViewController" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" id="wlO-aA-YB2">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="settingsCell" id="noa-bA-VKw">
...
