...
- (void)tableView:(UITableView *)tableView didSelectRowAtIndexPath:(NSIndexPath *)indexPath
{
    if ([indexPath section] == 1 && [indexPath row] == 0) { // Delete
        NSLog(@"Delete");

        UIAlertController *alert=   [UIAlertController
                                      alertControllerWithTitle:@"Will delete file"
                                      message:@"Are you sure?"
                                      preferredStyle:UIAlertControllerStyleAlert];

        UIAlertAction* actionYes = [UIAlertAction
                             actionWithTitle:@"Yes"
                             style:UIAlertActionStyleDestructive
                             handler:^(UIAlertAction * action)
                             {
                                 NSLog(@"yes delete");
                                 [self.dataFile deleteFile];
                                 [self dismissViewControllerAnimated:YES completion:nil];
...
